--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <a class="kisa" href="https://www.tiktok.com/@tlamtu?lang=ru-RU">
                 <div class="karta">
                     <div>
-                        <img class="w122" src="tiktok.jpeg">                    
+                        <img class="w122" src="index(4).jpeg">                    
                     </div>
                     <div>
                         <h2>TIK TOK</h2>
